--- a/src/components/ItemCount/ItemCount.css
+++ b/src/components/ItemCount/ItemCount.css
@@ -1,9 +1,9 @@
 .Controls{
     display: flex;
     flex-direction: row;
-    justify-content: center;
     align-items: center;
-    gap: 5px;
+    gap: 0px 50px;
+    margin-top: -20px;
 
 }
 
@@ -14,7 +14,34 @@
 }
 
 .Button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 5px;
     border: 1px solid black;
     background-color: white;
+    width: 180px;
+    height: 30px;
+
+}
+
+.Button:hover{
+    background-color: rgba(78, 78, 78, 0.205);
+}
+
+.Button img{
+    width: 20px;
+}
+
+.units{
+    font-size: 18px;
+    margin: 0px;
+    padding: 0px;
+}
+
+.containerBox{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
