--- a/src/components/CartWidget/CartWidget.css
+++ b/src/components/CartWidget/CartWidget.css
@@ -1,10 +1,35 @@
-.containerCart{
+.containerCartWidget{
 display: flex;
-justify-content: center;
+justify-content: flex-end;
 align-items: center;
-gap: 10px;
+gap: 5px;
+text-decoration: none;
+font-size: 20px;
+color: black;
+font-weight: bold;
+
 }
 
-.containerCart img{  
-width: 42px;
+.containerCartWidget img{  
+    width: 42px;
+
+}
+
+.containerCartWidget:hover {
+
+    animation: shake 0.6s;
+}
+
+@keyframes shake {
+    0% { transform: translate(0.5px, 0.5px) rotate(0deg); }
+    10% { transform: translate(-0.5px, -1.5px) rotate(-1deg); }
+    20% { transform: translate(-2.5px, -0.5px) rotate(1deg); }
+    30% { transform: translate(2.5px, 1.5px) rotate(0deg); }
+    40% { transform: translate(0.5px, -0.5px) rotate(1deg); }
+    50% { transform: translate(-0.5px, 1.5px) rotate(-1deg); }
+    60% { transform: translate(-2.5px, 0.5px) rotate(0deg); }
+    70% { transform: translate(2.5px, 0.5px) rotate(-1deg); }
+    80% { transform: translate(-0.5px, -0.5px) rotate(1deg); }
+    90% { transform: translate(0.5px, 1.5px) rotate(0deg); }
+    100% { transform: translate(0.5px, -1.5px) rotate(-1deg); }
 }
