--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -3,21 +3,32 @@
     height: 100%;
 }
 
+.CardItem picture{
+    height: 150px;
+    width: 150px;
+}
+
 .CardItem{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    border: 1px solid rgb(243, 243, 243);
+    border-radius: 15px;
+    width: 250px;
+    height: 300px;
+
 }
 
-.CardItem picture{
-    height: 200px;
-    width: 200px;
+.CardItem:hover{
+    box-shadow: 0px 0.5px 30px 1px rgba(0,0,0,0.34);
 }
+
 
 header h2{
     margin: 5px;
-    font-size: 120%;
+    font-size: 100%;
+    font-weight: 400;
 }
 
 .Info{
@@ -37,14 +48,18 @@ footer{
 
 .Options {
     text-decoration: none;
-    color: black;
-    border: solid 1px grey;
+    font-weight: 400;
+    color: rgb(255, 255, 255);
+    border: none;
     padding: 4px;
-    border-radius: 8px;
+    border-radius: 5px;
     text-align: center;
+    background-color: rgb(0, 0, 0);
 
 }
 
 .Options:hover{
-    background-color: rgba(78, 78, 78, 0.205);
+    background-color: white;
+    color: black;
+    border: 1px solid black;
 }
