solucionando algunos estilos responsive

--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -3,7 +3,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 70px;
+    gap: 30px;
+    margin-bottom: 50px;
 }
 
 .cartContainer{
@@ -55,4 +56,63 @@
     background-color: white;
     color: red;
     border: 1px solid red;
+}
+
+
+
+@media only screen and (max-width:576px) {
+
+    .cartContainer table tr th {
+
+        padding: 10px;
+        font-size: 0.9rem;
+        font-weight: 500;
+    }
+    
+
+    .cartContainer{
+        gap: 30px;
+        max-width: 576px;
+    }
+
+    .containerActions{
+        gap: 20px;
+        max-width: 768px;
+    }
+
+    .containerBut{
+        display: flex;
+        gap: 10px;
+    }
+    
+    
+
+}
+
+@media only screen and (max-width:768px){
+
+    .cartContainer table tr th {
+
+        padding: 10px;
+        font-size: 1rem;
+        font-weight: 600;
+        max-width: 768px;
+    }
+    
+
+    .cartContainer{
+        gap: 30px;
+        max-width: 768px;
+    }
+
+    .containerActions{
+        gap: 20px;
+        max-width: 768px;
+    }
+
+    .containerBut{
+        display: flex;
+        gap: 10px;
+    }
+
 }
