--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -29,6 +29,10 @@ header h2{
     margin: 5px;
     font-size: 100%;
     font-weight: 400;
+    min-height: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .Info{
