--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -1,37 +1,40 @@
 
 .detailContainer{
     display: grid;
-    grid-template-columns: 40% 50%;
+    grid-template-columns: 35% 65%;
+    gap: 0px;
+    justify-content: center;
+    align-items: center;
     margin: 50px;
-    gap: 25px;
+    
 }
 
-picture {
-    display: flex;
-    justify-content: center;
-}
 
 picture img {
     width: 80%;
-    display: flex;
+
 }
 
 .infoContainer {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    
+    align-items: center;    
 }
 
 .title h2{
-    font-size: 40px;
+    font-size: 3rem;
+}
+
+.description{
+    font-size: 1.2rem;
 }
 
 .stock{
-    font-size: 20px;
+    font-size: 1.5rem;
     font-weight: bold;
 }
+
 
 .dataContainer{
     display: flex;
@@ -57,7 +60,121 @@ picture img {
 }
 
 .price{
-    font-size: 30px;
+    font-size: 2rem;
     font-weight: bold;
     margin: 0px;
+}
+
+.priceBefore{
+    color:rgb(0, 0, 0) ;
+    margin: 0px;
+}
+
+.tachado {
+    text-decoration: line-through;
+    font-weight: bold;
+}
+
+.containerPrices{
+    display: flex;
+    flex-direction: column;
+    gap: 0px;
+}
+
+.containerOption{
+    display: flex;
+    gap: 10px;
+}
+.Option{
+    text-decoration: none;
+    font-weight: 500;
+    color: rgb(255, 255, 255);
+    border: none;
+    padding: 5px;
+    background-color: red;
+}
+
+
+
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+
+    .title h2{
+        font-size: 1.5rem;
+    }
+
+    .stock{
+        font-size: 1rem;
+    }
+
+    picture img {
+        width: 100%;
+    
+    }
+
+    .price{
+        font-size: 1.5rem;
+    }
+
+    .data{
+        gap: 15px;
+    }
+
+
+  }
+
+
+  @media only screen and (max-width: 767px) {
+
+    .detailContainer{
+        display: grid;
+        grid-template-columns: 35% 65%;
+        margin: 50px;
+        gap: 25px;
+    }
+
+    .title h2{
+        font-size: 1.5rem;
+    }
+
+    .stock{
+        font-size: 1rem;
+    }
+
+    picture img {
+        width: 100%;
+    
+    }
+
+    .price{
+        font-size: 1.5rem;
+    }
+
+    .data{
+        gap: 15px;
+    }
+    
+  }
+
+@media only screen and (max-width:576px) {
+
+    .detailContainer{
+        
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 50% 50%;
+        justify-content: center;
+        align-items: center;
+        max-width: 576px;
+        
+    }
+
+    picture img {
+        width: 60%;
+    
+    }
+
+    .data{
+        margin-bottom: 25px;
+    }
+
 }
