--- a/src/components/ItemList/ItemList.css
+++ b/src/components/ItemList/ItemList.css
@@ -2,6 +2,8 @@
 
     width: 85%;
     display: grid;
-    grid-template-columns: 25% 25% 25% 25% ;
-    gap: 50px 10px;
+    grid-template-columns: repeat(auto-fit, minmax(min(350px,100%), 1fr));
+    gap: 40px 0px;
+    place-items: center;
 }
+
