--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -5,7 +5,7 @@
     gap: 0px;
     justify-content: center;
     align-items: center;
-    margin: 50px;
+    margin: 50px 50px;
     
 }
 
@@ -90,7 +90,7 @@ picture img {
     font-weight: 500;
     color: rgb(255, 255, 255);
     border: none;
-    padding: 5px;
+    padding: 5px 13px;
     background-color: red;
 }
 
