--- a/src/components/ItemList/ItemList.css
+++ b/src/components/ItemList/ItemList.css
@@ -2,8 +2,45 @@
 
     width: 85%;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(min(350px,100%), 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(min(280px,100%), 1fr));
     gap: 40px 0px;
     place-items: center;
 }
 
+.containerPagCards{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 100px;
+    margin-top: 80px;
+}
+
+.containerButtonPage{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.pageButton{
+
+    background-color: white;
+    border: 1px solid red;
+    border-radius: 100%;
+    color: red;
+    font-size: 1rem;
+    
+}
+
+.pageButton:hover{
+    transform: scale(1.2);
+    transform: 0.2s;
+}
+
+.pageButton:disabled{
+    color: rgba(255, 0, 0, 0.151);
+    transform: none;
+    border: 1px solid rgba(255, 0, 0, 0.151);
+}
