--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -15,8 +15,8 @@
     align-items: center;
     border: 1px solid rgb(243, 243, 243);
     border-radius: 15px;
-    width: 250px;
-    height: 300px;
+    width: 180px;
+    height: 320px;
 
 }
 
@@ -27,7 +27,7 @@
 
 header h2{
     margin: 5px;
-    font-size: 100%;
+    font-size: .85rem;
     font-weight: 400;
     min-height: 45px;
     display: flex;
