--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -2,7 +2,73 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 22px;
-    margin: auto auto 50px auto;
 
+}
+
+.containerFilter{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+
+}
+
+.containerFilter label{
+    position: relative;
+    width: 100%;
+    min-width: 150px;
+}
+
+.containerMain{
+    display: grid;
+    grid-template-columns: 15% 85%;
+    margin-top: 80px;
+    justify-content: center;
+    padding: 0px 50px;
+
+}
+
+.asideContainer{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    align-items: center;
+    background-color: rgba(235, 235, 235, 0.295);
+    padding: 5px;
+}
+
+.asideContainer label{
+    display: flex;
+    gap: 7px;
+}
+
+.asideContainer h2{
+    font-size: .8rem;
+    color: red;
+    font-weight: 400;
+    margin: 15px;
+}
+
+.asideContainer span{
+    color: rgb(92, 92, 92);
+}
+
+.labelItem{
+    color: red;
+    font-weight: 400;
+    border-bottom: 1px solid  rgb(255, 0, 0);
+    width: 100%;
+    text-align: start;
+    margin-bottom: 5px;
+    padding: 5px 10px;
+    font-size: 1rem;
+}
+
+.counterProd{
+    position: absolute;
+    left: 100%;
+}
+
+.brandItem{
+    font-size: .9rem;
 }
