--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -67,6 +67,13 @@ picture img {
     margin: 0px;
 }
 
+.contPrice{
+    border-bottom: 1px solid rgba(180, 180, 180, 0.575);
+    width: 100%;
+    padding: 3px;
+    font-size: 1.2rem;
+}
+
 .priceBefore{
     color:rgb(0, 0, 0) ;
     margin: 0px;
